# cython-poc

./: .gitignore  README.md  quick_test.bat  quick_test.sh  test_local.bat  test_obfuscation.py
client-application/: .gitignore  Dockerfile  build.bat  build.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
client-application/controllers/: __init__.py  app_controller.py
client-application/core/: __init__.py  protected_module.pyx
client-application/models/: __init__.py  license_model.py
client-application/services/: __init__.py  business_service.py  license_service.py
client-application/utils/: __init__.py  machine_utils.py
server-application/: .gitignore  main.py
server-application/controllers/: __init__.py  license_controller.py
server-application/models/: __init__.py  license_model.py
server-application/services/: __init__.py  license_service.py
server-application/utils/: crypto_utils.py
